* 修改了文件

--- a/views/note/index.ejs
+++ b/views/note/index.ejs
@@ -8,7 +8,7 @@
 <p style="text-align: right">欢迎您:<a href="user/<%=user._id%>"><%=user.email%></a>&nbsp;|&nbsp;<a href="logout">退出</a></p
 <div style="width: 1200px;height:600px;text-align: center;background-color: aliceblue;position:absolute;">
     <div style="width: 1011px;height:30px;background-color: skyblue;padding-left: 18%;padding-top: auto;padding-bottom: auto;">
-        <span onclick="createNote();" onmouseover="">创建新笔记</span>
+        <a href="javascript:void(0);" onclick="createNote();">创建新笔记</a>
     </div>
     <div style="height:500px;width: 200px;background-color: azure;float: left;padding: 10px;">
         <h4>我的笔记</h4>
